--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h1 class="responsive-headline">I am Nikhil Singh.</h1>
+            <h3>I am a  <span>Cloud Engineer</span> who love <span>Kubernetes,</span> Prometheus, <span> Ansible, </span>
+                <span>and Python </span>. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
