Fixed LinkedIn link

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <hr />
             <ul class="social">
                <li><a href="https://github.com/nikkytub"><i class="fa fa-github"></i></a></li>
-               <li><a href="www.linkedin.com/in/nikhil-singh-809891bb"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/nikhil-singh-809891bb"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
             </ul>
          </div>
@@ -549,7 +549,7 @@
 
             <ul class="social-links">
                <li><a href="https://github.com/nikkytub"><i class="fa fa-github"></i></a></li>
-               <li><a href="www.linkedin.com/in/nikhil-singh-809891bb"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/nikhil-singh-809891bb"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
             </ul>
 
