--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I am Nikhil Singh</h1>
+            <h2 class="responsive-headline">Welcome to my page</h2>
             <h3>I am a  <span>Cloud Engineer</span> who love <span>Kubernetes,</span> Prometheus, <span> Ansible, </span>
                 <span>and Python </span>. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>. Details below are incorrect and will be
-                updated soon.</h3>
+            and learn more <a class="smoothscroll" href="#about">about me.</a> </h3>
             <hr />
             <ul class="social">
                <li><a href="https://github.com/nikkytub"><i class="fa fa-github"></i></a></li>
