--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h2 class="responsive-headline">Welcome to my page</h2>
-            <h3>I am a  <span>Cloud Engineer</span> who love <span>Kubernetes,</span> Prometheus, <span> Ansible, </span>
-                <span>and Python </span>. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me.</a> </h3>
+            <h3> <span>Welcome to my page </span> </h3>
+            <h3>Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            to know more <a class="smoothscroll" href="#about">about me.</a> </h3>
             <hr />
             <ul class="social">
                <li><a href="https://github.com/nikkytub"><i class="fa fa-github"></i></a></li>
@@ -192,10 +191,6 @@
                   <h3>SAP SE</h3>
                   <p class="info">Cloud Engineer <span>&bull;</span> <em class="date">August 2017 - Present</em></p>
 
-                  <p>
-                  Cloud Computing, IAAS, Kubernetes, Helm, Openstack, Prometheus, Ansible, Networking, Jenkins, Jira,
-                      Python, Go, P4 etc.
-                  </p>
 
                </div>
 
@@ -208,9 +203,42 @@
                   <h3>ProfitBricks GMBH</h3>
                   <p class="info">Working Student Python <span>&bull;</span> <em class="date">2017</em></p>
 
-                  <p>
-                  Cloud Computing, IAAS, Pytest, Stress testing, TCP/UDP, SNMP, DHCP, Monitoring Bandwidth and Latency etc.
-                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+              <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>American Express</h3>
+                  <p class="info">Sr. Analyst <span>&bull;</span> <em class="date">2014 - 2015</em></p>
+
+
+               </div>
+
+            </div> <!-- item end -->
+
+             <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Genpact</h3>
+                  <p class="info">Process Associate <span>&bull;</span> <em class="date">2013 - 2014</em></p>
+
+
+               </div>
+
+            </div> <!-- item end -->
+
+             <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>BCML Power</h3>
+                  <p class="info">Electrical Engineer <span>&bull;</span> <em class="date">2010 - 2011</em></p>
+
 
                </div>
 
@@ -231,21 +259,10 @@
 
          <div class="nine columns main-col">
 
-            <p>Docker, Kubernetes, Ansible, Python, Go, P4. Everything related to Cloud Computing
+            <p>Cloud Computing, IaaS, PaaS, SaaS, Docker, Kubernetes, Helm, Prometheus, Openstack, GCP, AWS, Ansible,
+                Python, SDN, P4 etc.
             </p>
 
-				<div class="bars">
-
-				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Docker</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Kubernetes</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Ansible</em></li>
-						<li><span class="bar-expand css"></span><em>Python</em></li>
-						<li><span class="bar-expand html5"></span><em>Go</em></li>
-                  <li><span class="bar-expand jquery"></span><em>P4</em></li>
-					</ul>
-
-				</div><!-- end skill-bars -->
 
 			</div> <!-- main-col end -->
 
