Removed unnecessary details

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 
             <h2>About Me</h2>
 
-            <p>I am a tech lover and a fan of Elon Musk. I like his idea of working every waking hour and have been
-                trying to do so. I see some incredible changes but way to go.
+            <p>Tech lover, Space explorer, Fitness enthusiast
             </p>
 
             <div class="row">
