--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                <div class="twelve columns">
 
                   <h3>Genpact</h3>
-                  <p class="info">Process Associate <span>&bull;</span> <em class="date">2013 - 2014</em></p>
+                  <p class="info">Process Associate/Developer <span>&bull;</span> <em class="date">2012 - 2013</em></p>
 
 
                </div>
@@ -259,7 +259,7 @@
          <div class="nine columns main-col">
 
             <p>Cloud Computing, IaaS, PaaS, SaaS, Docker, Kubernetes, Helm, Prometheus, Openstack, GCP, AWS, Ansible,
-                Python, SDN, P4 etc.
+                Python, Django, SDN, P4 etc.
             </p>
 
 
