--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     <h3>Networking </h3>
 
                     <p>
-                        SDN, Openflow, P4
+                        SDN, Cisco APIC, Openflow, P4, Wireshark, tshark, tcpdump, iperf, snmp, iptables, nmap, tc,
+                        VPN (OpenVPN, IPSec)
                     </p>
                 </div>
             </div>
@@ -223,22 +224,14 @@
 
         <div class="row">
             <div class="col-md-12">
-                <div class="content-item">
-                    <h3>Books</h3>
-
-                    <p>You can Win</p>
-                </div>
+                
                 <div class="content-item">
                     <h3>Sports</h3>
 
-                    <p>Basketball, Table Tennis, Badminton, Cricket</p>
+                    <p>5K run, Basketball, Table Tennis, Badminton, Cricket</p>
 
                 </div>
-                <div class="content-item">
-                    <h3>Fun</h3>
-
-                    <p>Drinks with friends</p>
-                </div>
+                
             </div>
         </div>
         <!-- .row -->
